force-app/main/default/objects/PMD_Analysis__c/PMD_Analysis__c.object-meta.xml
<CustomObject>
    <label>PMD Analysis</label>
    <nameField>
        <displayFormat>PMD-{00000}</displayFormat>
        <label>PMD Analysis</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMD Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>