force-app/main/default/objects/PMD_Analysis__c/fields/AI_Suggestions_Generated__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggestions_Generated__c</fullName>
    <label>AI Suggestions Generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>