force-app/main/default/objects/PMD_Analysis__c/fields/Analysis_Summary__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Summary__c</fullName>
    <label>Analysis Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>