force-app/main/default/objects/PMD_Analysis__c/fields/Analyzed_By__c.field-meta.xml
<CustomField>
    <fullName>Analyzed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analyzed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PMD_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>