force-app/main/default/objects/PMD_Analysis__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <label>Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Test Class</fullName>
            </value>
            <value>
                <fullName>Trigger Handler</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Schedulable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>