force-app/main/default/objects/PMD_Analysis__c/fields/High_Issues__c.field-meta.xml
<CustomField>
    <fullName>High_Issues__c</fullName>
    <label>High Issues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>