force-app/main/default/objects/PMD_Analysis__c/fields/Info_Issues__c.field-meta.xml
<CustomField>
    <fullName>Info_Issues__c</fullName>
    <label>Info Issues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>