force-app/main/default/objects/PMD_Analysis__c/fields/Low_Issues__c.field-meta.xml
<CustomField>
    <fullName>Low_Issues__c</fullName>
    <label>Low Issues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>