force-app/main/default/objects/PMD_Analysis__c/fields/Medium_Issues__c.field-meta.xml
<CustomField>
    <fullName>Medium_Issues__c</fullName>
    <label>Medium Issues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>